--- a/iconloaderlib/res/values/colors.xml
+++ b/iconloaderlib/res/values/colors.xml
@@ -17,8 +17,8 @@
 */
 -->
 <resources xmlns:androidprv="http://schemas.android.com/apk/prv/res/android">
-    <color name="themed_icon_color">@androidprv:color/system_on_theme_app_light</color>
-    <color name="themed_icon_background_color">@androidprv:color/system_theme_app_light</color>
+    <color name="themed_icon_color">@android:color/system_accent1_600</color>
+    <color name="themed_icon_background_color">@android:color/system_neutral1_50</color>
     <!-- Grayscale work badge icon color used for fallback only (system provides colorized icon) -->
     <color name="themed_badge_icon_color">#AAAAAA</color>
     <color name="themed_badge_icon_background_color">#222222</color>
